# Job-Board

./: .gitignore  Dockerfile  README  README.md  TODO.txt  celerybeat-schedule.dir  db.sqlite3  docker-compose.debug.yml  docker-compose.yml  dump.rdb  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  web_scraping_test.py
jobWebsite/: asgi.py  celery.py  mckinesy-jobs.csv  pdfScraper.py  settings.py  urls.py  webScraper.py  wsgi.py
jobWebsite/templates/: layout1.html
jobs/: admin.py  filters.py  models.py  urls.py  utils.py  views.py
jobs/migrations/: 0001_initial.py  0002_category_company_and_more.py  0002_remove_job_slug.py  0002_remove_jobs_closing_date_remove_jobs_enquires_and_more.py  0003_alter_jobs_type.py  0003_job_slug.py  0003_rename_urllink_jobs_url_link_jobs_rating.py  0004_remove_job_category.py  0004_remove_jobs_date_posted.py  0005_company.py  0005_jobs_date_posted.py  0006_alter_jobs_location.py  0006_delete_company_job_category.py  0007_contract_type.py  0007_rename_jobs_job.py  0008_job_source.py  0008_remove_job_contract_type.py  0009_job_contract_type.py  0010_job_contract_type1.py  0011_role.py  0012_job_full_job_qualifactions_dutes_all.py  0013_rename_full_job_qualifactions_dutes_all_job_full_job_qualifications_duties_all.py
jobs/template_tags/: filter_tags.py
jobs/templates/: apply_modal.html  base.html  contact.html  home.html  indexElzero.html  nav_bar.html  page_loader.html  signup_modal.html  top_bar.html
services/: WebScraper.py  admin.py  models.py  tasks.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+54 files in other folders)
