[tool.poetry]
name = "jobwebsite"
version = "0.1.0"
description = "job board to scrape mulitiple jobsites and display such jobs on here"
authors = ["thoth2357"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.6"
redis = "^5.0.1"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
